--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@langchain/community": "^0.3.37",
+    "@langchain/core": "^0.3.43",
+    "@langchain/groq": "^0.2.0",
     "@next/swc-wasm-nodejs": "13.5.1",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
@@ -42,8 +45,8 @@
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
-    "axios": "^1.6.8",
-    "chart.js": "^4.4.0",
+    "axios": "^1.8.4",
+    "chart.js": "^4.4.8",
     "chartjs-plugin-annotation": "^3.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -60,7 +63,7 @@
     "next-themes": "^0.3.0",
     "postcss": "8.4.30",
     "react": "^18.3.1",
-    "react-chartjs-2": "^5.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
