--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "autoprefixer": "10.4.15",
     "axios": "^1.8.4",
     "chart.js": "^4.4.8",
-    "chartjs-plugin-annotation": "^3.0.1",
+    "chartjs-plugin-annotation": "^3.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -55,11 +55,11 @@
     "embla-carousel-react": "^8.3.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
-    "framer-motion": "^12.6.2",
+    "framer-motion": "^12.6.3",
     "input-otp": "^1.2.4",
     "lodash": "^4.17.21",
     "lucide-react": "^0.446.0",
-    "next": "^15.2.3",
+    "next": "^15.2.4",
     "next-themes": "^0.3.0",
     "postcss": "8.4.30",
     "react": "^18.3.1",
@@ -78,5 +78,9 @@
     "typescript": "5.2.2",
     "vaul": "^0.9.9",
     "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.17.16",
+    "@types/sentiment": "^5.0.4"
   }
 }
