--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "ai": "^4.2.11",
     "autoprefixer": "10.4.15",
     "axios": "^1.8.4",
     "chart.js": "^4.4.8",
@@ -67,6 +68,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-hot-toast": "^2.5.2",
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.12.7",
     "sentiment": "^5.0.2",
