--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
-    "@langchain/community": "^0.3.37",
+    "@langchain/community": "^0.3.54",
     "@langchain/core": "^0.3.43",
     "@langchain/groq": "^0.2.0",
     "@next/swc-wasm-nodejs": "13.5.1",
@@ -41,6 +41,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@tavily/core": "^0.5.11",
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
