--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "ai": "^4.2.11",
     "autoprefixer": "10.4.15",
     "axios": "^1.8.4",
+    "bcryptjs": "^3.0.2",
     "chart.js": "^4.4.8",
     "chartjs-plugin-annotation": "^3.1.0",
     "class-variance-authority": "^0.7.0",
@@ -61,7 +62,9 @@
     "input-otp": "^1.2.4",
     "lodash": "^4.17.21",
     "lucide-react": "^0.446.0",
+    "mongoose": "^8.18.1",
     "next": "^15.2.4",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.3.0",
     "postcss": "8.4.31",
     "react": "^18.3.1",
@@ -83,6 +86,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/lodash": "^4.17.16",
     "@types/sentiment": "^5.0.4"
   }
