feat: Phase 1 Complete - Portfolio & Watchlist Backend + Testing
✅ Database Models:
- Portfolio model with holdings schema
- Watchlist model with assets schema

✅ API Routes (9 endpoints):
- Portfolio CRUD + holdings management
- Watchlist CRUD + asset management
- All routes with authentication & rate limiting

✅ Next.js 15 Compatibility:
- Fixed async params in all dynamic routes
- Proper error handling

✅ Testing Infrastructure:
- Browser-based API test page
- MongoDB setup guide
- Auto-extracting IDs from responses

✅ Dependencies:
- Installed bcryptjs for authentication
- MongoDB connection utility

Ready for Phase 2: Portfolio UI

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "ai": "^5.0.95",
     "autoprefixer": "10.4.15",
     "axios": "^1.12.1",
+    "bcryptjs": "^3.0.3",
     "chart.js": "^4.4.8",
     "chartjs-plugin-annotation": "^3.1.0",
     "class-variance-authority": "^0.7.0",
