--- a/package.json
+++ b/package.json
@@ -56,19 +56,23 @@
     "chartjs-plugin-annotation": "^3.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
+    "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
     "framer-motion": "^12.6.3",
+    "fuse.js": "^7.1.0",
     "input-otp": "^1.2.4",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.446.0",
     "mongoose": "^8.18.1",
     "next": "^15.2.4",
     "next-auth": "^4.24.11",
     "next-themes": "^0.3.0",
+    "papaparse": "^5.5.3",
     "postcss": "8.4.31",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
@@ -95,6 +99,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/jest": "^30.0.0",
     "@types/lodash": "^4.17.16",
+    "@types/papaparse": "^5.5.1",
     "@types/sentiment": "^5.0.4",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
