--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@tavily/core": "^0.5.11",
+    "@types/d3": "^7.4.3",
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
@@ -57,6 +58,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "d3": "^7.9.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
     "eslint": "8.49.0",
@@ -66,6 +68,7 @@
     "input-otp": "^1.2.4",
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
+    "lightweight-charts": "^5.0.9",
     "lodash": "^4.17.21",
     "lucide-react": "^0.446.0",
     "mongoose": "^8.18.1",
@@ -93,6 +96,8 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@axe-core/react": "^4.11.0",
+    "@next/bundle-analyzer": "^16.0.7",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
@@ -101,6 +106,7 @@
     "@types/lodash": "^4.17.16",
     "@types/papaparse": "^5.5.1",
     "@types/sentiment": "^5.0.4",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "ts-node": "^10.9.2"
