--- a/package.json
+++ b/package.json
@@ -66,21 +66,22 @@
     "framer-motion": "^12.6.3",
     "fuse.js": "^7.1.0",
     "input-otp": "^1.2.4",
+    "isomorphic-dompurify": "^2.33.0",
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
     "lightweight-charts": "^5.0.9",
     "lodash": "^4.17.21",
     "lucide-react": "^0.446.0",
     "mongoose": "^8.18.1",
-    "next": "^15.2.4",
+    "next": "^16.0.7",
     "next-auth": "^4.24.11",
     "next-themes": "^0.3.0",
     "papaparse": "^5.5.3",
     "postcss": "8.4.31",
-    "react": "^18.3.1",
+    "react": "^19.2.1",
     "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "^19.2.1",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.5.2",
     "react-resizable-panels": "^2.1.3",
@@ -98,6 +99,7 @@
   "devDependencies": {
     "@axe-core/react": "^4.11.0",
     "@next/bundle-analyzer": "^16.0.7",
+    "@playwright/test": "^1.57.0",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
