--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,13 +56,25 @@ jobs:
       - name: Build
         run: npm run build
         env:
+          # Required
           MONGODB_URI: ${{ secrets.MONGODB_URI }}
           NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
           NEXTAUTH_URL: http://localhost:3000
-          NEXT_PUBLIC_NEWSAPI_KEY: ${{ secrets.NEXT_PUBLIC_NEWSAPI_KEY }}
-          TWELVE_DATA_API_KEY: ${{ secrets.TWELVE_DATA_API_KEY }}
+          # API Keys for Multi-Agent System
           NEXT_PUBLIC_GROK_API_KEY: ${{ secrets.NEXT_PUBLIC_GROK_API_KEY }}
+          GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
+          # Market Data APIs
+          TWELVE_DATA_API_KEY: ${{ secrets.TWELVE_DATA_API_KEY }}
+          NEWS_API_KEY: ${{ secrets.NEWS_API_KEY }}
+          NEXT_PUBLIC_NEWSAPI_KEY: ${{ secrets.NEXT_PUBLIC_NEWSAPI_KEY }}
+          # Search & Intelligence
           NEXT_PUBLIC_TAVILY_API_KEY: ${{ secrets.NEXT_PUBLIC_TAVILY_API_KEY }}
+          TAVILY_API_KEY: ${{ secrets.TAVILY_API_KEY }}
+          # Social APIs (Optional)
+          REDDIT_CLIENT_ID: ${{ secrets.REDDIT_CLIENT_ID }}
+          REDDIT_CLIENT_SECRET: ${{ secrets.REDDIT_CLIENT_SECRET }}
+          # Base URL
+          NEXT_PUBLIC_BASE_URL: http://localhost:3000
 
   e2e:
     runs-on: ubuntu-latest
@@ -86,9 +98,19 @@ jobs:
       - name: Run Playwright tests
         run: npx playwright test
         env:
+          # Required
           MONGODB_URI: ${{ secrets.MONGODB_URI }}
           NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
           NEXTAUTH_URL: http://localhost:3000
+          # API Keys
+          NEXT_PUBLIC_GROK_API_KEY: ${{ secrets.NEXT_PUBLIC_GROK_API_KEY }}
+          GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
+          TWELVE_DATA_API_KEY: ${{ secrets.TWELVE_DATA_API_KEY }}
+          NEWS_API_KEY: ${{ secrets.NEWS_API_KEY }}
+          NEXT_PUBLIC_NEWSAPI_KEY: ${{ secrets.NEXT_PUBLIC_NEWSAPI_KEY }}
+          NEXT_PUBLIC_TAVILY_API_KEY: ${{ secrets.NEXT_PUBLIC_TAVILY_API_KEY }}
+          TAVILY_API_KEY: ${{ secrets.TAVILY_API_KEY }}
+          NEXT_PUBLIC_BASE_URL: http://localhost:3000
 
       - name: Upload Playwright Report
         uses: actions/upload-artifact@v4
