--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev":  "next dev",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start -H 0.0.0.0 -p ${PORT:-10000}",
     "lint": "next lint",
@@ -13,9 +13,10 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
-    "@langchain/community": "^1.0.4",
-    "@langchain/core": "^1.1.8",
+    "@langchain/community": "^1.1.4",
+    "@langchain/core": "^1.1.15",
     "@langchain/groq": "^1.0.0",
+    "@langchain/langgraph": "^1.1.0",
     "@next/swc-wasm-nodejs": "13.5.1",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
@@ -47,15 +48,15 @@
     "@tavily/core": "^0.5.11",
     "@types/d3": "^7.4.3",
     "@types/node": "20.6.2",
-    "@types/react":  "18.2.22",
-    "@types/react-dom":  "18.2.7",
+    "@types/react": "18.2.22",
+    "@types/react-dom": "18.2.7",
     "ai": "^5.0.95",
     "autoprefixer": "10.4.15",
     "axios": "^1.12.1",
     "bcryptjs": "^3.0.3",
     "chart.js": "^4.4.8",
     "chartjs-plugin-annotation": "^3.1.0",
-    "class-variance-authority":  "^0.7.0",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "d3": "^7.9.0",
@@ -68,7 +69,7 @@
     "input-otp": "^1.2.4",
     "isomorphic-dompurify": "^2.33.0",
     "jspdf": "^4.0.0",
-    "jspdf-autotable":  "^5.0.7",
+    "jspdf-autotable": "^5.0.7",
     "lightweight-charts": "^5.0.9",
     "lodash": "^4.17.21",
     "lucide-react": "^0.446.0",
@@ -79,9 +80,9 @@
     "papaparse": "^5.5.3",
     "postcss": "8.4.31",
     "react": "^19.2.1",
-    "react-chartjs-2":  "^5.3.0",
+    "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^8.10.1",
-    "react-dom":  "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.5.2",
     "react-resizable-panels": "^2.1.3",
@@ -94,7 +95,7 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
     "vaul": "^0.9.9",
-    "zod": "^3.23.8"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@axe-core/react": "^4.11.0",
