feat: Complete UI consistency & response quality improvements
- Standardize all three advisors (crypto, forex, stock) with icon-based AGENT_CONFIG
- Migrate state management from agentStatuses/showAgentPanel to currentAgent/agentSteps
- Update SSE parsing to match crypto pattern with steps array
- Replace badge panel with live agent status display during loading
- Add unknown agent filtering (skip 'unknown' agents in display)
- Fix build errors: remove duplicate code, fix inline return statements
- Update all three advisor prompts to show actual numbers without AI reflection
- Forbid meta-commentary like 'about analyzing X', 'Based on the data provided'
- Provide natural analysis with prices, indicators, and percentages integrated
- Add CI/CD workflow for automated Render deployment using API
- Update deployment documentation with API-based setup instructions

Technical changes:
- app/cryptoadvisor/page.tsx: Added unknown agent filter
- app/forexadvisor/page.tsx: Complete UI overhaul with icons, SSE updates
- app/stockadvisor/page.tsx: Complete UI overhaul with icons, SSE updates
- lib/ai/graph.ts: Updated crypto finalResponse prompt
- lib/ai/forex-graph.ts: Updated forex finalResponse prompt
- lib/ai/stock-graph.ts: Updated stock finalResponse prompt
- .github/workflows/ci.yml: Added deploy job with Render API integration
- docs/DEPLOYMENT_SETUP.md: Updated with API deployment setup

All three advisors now deliver professional analysis with specific data points,
no meta-commentary, and consistent UI experience.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -119,3 +119,31 @@ jobs:
           name: playwright-report
           path: playwright-report/
           retention-days: 30
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [test, build, e2e]
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+
+    steps:
+      - name: Trigger Render Deployment
+        run: |
+          RESPONSE=$(curl -X POST "https://api.render.com/v1/services/${{ secrets.RENDER_SERVICE_ID }}/deploys" \
+            -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
+            -H "Content-Type: application/json" \
+            -d '{"clearCache": "do_not_clear"}' \
+            -w "\n%{http_code}")
+          
+          HTTP_CODE=$(echo "$RESPONSE" | tail -n1)
+          BODY=$(echo "$RESPONSE" | sed '$d')
+          
+          echo "Response: $BODY"
+          
+          if [ "$HTTP_CODE" -eq 201 ]; then
+            echo "✅ Deployment triggered successfully!"
+            echo "Service ID: ${{ secrets.RENDER_SERVICE_ID }}"
+            echo "View logs at: https://dashboard.render.com/web/${{ secrets.RENDER_SERVICE_ID }}"
+          else
+            echo "❌ Deployment failed with status code: $HTTP_CODE"
+            exit 1
+          fi
