--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,23 +56,25 @@ jobs:
       - name: Build
         run: npm run build
         env:
-          # Required
-          MONGODB_URI: ${{ secrets.MONGODB_URI }}
-          NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
+          # Required - use dummy values for build if secrets not set
+          MONGODB_URI: ${{ secrets.MONGODB_URI || 'mongodb://localhost:27017/ai-finance-build' }}
+          NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET || 'dummy-secret-for-build-only-min-32-chars-long' }}
           NEXTAUTH_URL: http://localhost:3000
           # API Keys for Multi-Agent System
-          NEXT_PUBLIC_GROK_API_KEY: ${{ secrets.NEXT_PUBLIC_GROK_API_KEY }}
-          GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
+          NEXT_PUBLIC_GROK_API_KEY: ${{ secrets.NEXT_PUBLIC_GROK_API_KEY || 'dummy-key' }}
+          GROQ_API_KEY: ${{ secrets.GROQ_API_KEY || 'dummy-key' }}
           # Market Data APIs
-          TWELVE_DATA_API_KEY: ${{ secrets.TWELVE_DATA_API_KEY }}
-          NEWS_API_KEY: ${{ secrets.NEWS_API_KEY }}
-          NEXT_PUBLIC_NEWSAPI_KEY: ${{ secrets.NEXT_PUBLIC_NEWSAPI_KEY }}
+          TWELVE_DATA_API_KEY: ${{ secrets.TWELVE_DATA_API_KEY || 'dummy-key' }}
+          NEWS_API_KEY: ${{ secrets.NEWS_API_KEY || 'dummy-key' }}
+          NEXT_PUBLIC_NEWSAPI_KEY: ${{ secrets.NEXT_PUBLIC_NEWSAPI_KEY || 'dummy-key' }}
           # Search & Intelligence
-          NEXT_PUBLIC_TAVILY_API_KEY: ${{ secrets.NEXT_PUBLIC_TAVILY_API_KEY }}
-          TAVILY_API_KEY: ${{ secrets.TAVILY_API_KEY }}
+          NEXT_PUBLIC_TAVILY_API_KEY: ${{ secrets.NEXT_PUBLIC_TAVILY_API_KEY || 'dummy-key' }}
+          TAVILY_API_KEY: ${{ secrets.TAVILY_API_KEY || 'dummy-key' }}
           # Social APIs (Optional)
-          REDDIT_CLIENT_ID: ${{ secrets.REDDIT_CLIENT_ID }}
-          REDDIT_CLIENT_SECRET: ${{ secrets.REDDIT_CLIENT_SECRET }}
+          REDDIT_CLIENT_ID: ${{ secrets.REDDIT_CLIENT_ID || 'dummy-id' }}
+          REDDIT_CLIENT_SECRET: ${{ secrets.REDDIT_CLIENT_SECRET || 'dummy-secret' }}
+          # Base URL
+          NEXT_PUBLIC_BASE_URL: http://localhost:3000
           # Base URL
           NEXT_PUBLIC_BASE_URL: http://localhost:3000
 
