--- a/package.json
+++ b/package.json
@@ -91,7 +91,6 @@
     "sonner": "^1.5.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss": "4.1.18",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
     "vaul": "^1.1.2",
@@ -112,6 +111,7 @@
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
+    "tailwindcss": "^3.4.19",
     "ts-node": "^10.9.2"
   }
 }
