--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,17 +10,13 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [20.x]
-
     steps:
       - uses: actions/checkout@v6
 
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js
         uses: actions/setup-node@v6
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: "20.x"
           cache: "npm"
 
       - name: Install dependencies
@@ -39,7 +35,6 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    needs: test
 
     steps:
       - uses: actions/checkout@v6
@@ -78,7 +73,9 @@ jobs:
 
   e2e:
     runs-on: ubuntu-latest
-    needs: build
+    needs: [test, build]
+    # Only run e2e on main branch or when manually triggered
+    if: github.ref == 'refs/heads/main' || github.event_name == 'workflow_dispatch'
 
     steps:
       - uses: actions/checkout@v6
@@ -122,7 +119,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: [test, build, e2e]
+    needs: [test, build]
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
 
     steps:
